RESOLVED FIXED61623
Canvas/JSC: Auto-generate overloads for fillText()
https://bugs.webkit.org/show_bug.cgi?id=61623
Summary Canvas/JSC: Auto-generate overloads for fillText()
Andreas Kling
Reported 2011-05-27 05:19:06 PDT
SSIA.
Attachments
Proposed patch (6.78 KB, patch)
2011-05-27 05:26 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-05-27 05:26:57 PDT
Created attachment 95158 [details] Proposed patch
Andreas Kling
Comment 2 2011-05-27 05:58:08 PDT
Comment on attachment 95158 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=95158&action=review > LayoutTests/fast/canvas/script-tests/canvas-overloads-fillText.js:6 > +var TypeError = "TypeError: Type error"; Oops, this isn't used. Will remove when landing.
Andreas Kling
Comment 3 2011-05-31 09:08:56 PDT
Comment on attachment 95158 [details] Proposed patch Clearing flags on attachment: 95158 Committed r87729: <http://trac.webkit.org/changeset/87729>
Andreas Kling
Comment 4 2011-05-31 09:09:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.