2011-05-31  Andreas Kling  <kling@webkit.org>

Reviewed by Antti Koivisto.

        Canvas/JSC: Auto-generate overloads for fillText()
        https://bugs.webkit.org/show_bug.cgi?id=61623

        Add a test to verify the behavior of fillText() when called with different
        numbers of arguments. There are two differences to the previous behavior:

        - SyntaxError exceptions are now raised with the message "Not enough arguments."
        - Calling fillText() with superfluous arguments now lets the call through
          instead of raising a SyntaxError. This matches both Gecko and Presto.

        * fast/canvas/canvas-overloads-fillText-expected.txt: Added.
        * fast/canvas/canvas-overloads-fillText.html: Added.
        * fast/canvas/script-tests/canvas-overloads-fillText.js: Added.
2011-05-31  Andreas Kling  <kling@webkit.org>

        Reviewed by Antti Koivisto.

        Canvas/JSC: Auto-generate overloads for fillText()
        https://bugs.webkit.org/show_bug.cgi?id=61623

        Move CanvasRenderingContext2D.fillText() to auto-generated JSC bindings.
        Make it [RequiresAllArguments=Raise] to match the old behavior.
        This has the side-effect of aligning the behaviors of JSC and V8.

        Test: fast/canvas/canvas-overloads-fillText.html

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp:
        * html/canvas/CanvasRenderingContext2D.idl:


Canonical link: https://commits.webkit.org/77209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87729 268f45cc-cd09-0410-ab3c-d52691b4dbfc